<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="version_id">1.0.0</string>
	<string name="app_name">momo动态</string>
	<string name="txt_confirm">亲，确定吗？</string>
	<string name="txt_done">完成</string>
	<string name="txt_ok">确定</string>
	<string name="txt_send">发送</string>
	<string name="txt_cancel">取消</string>
	<string name="txt_exchange">替换</string>
	<string name="txt_save">保存</string>
	<string name="txt_nosave">不保存</string>
	<string name="txt_return">返回</string>
	<string name="txt_phone">电话</string>
	<string name="txt_delete">删除</string>
	<string name="txt_contact">联系人</string>
	<string name="txt_unit_ge">个</string>
	<string name="txt_failed">失败</string>
	<string name="txt_wait">请稍等</string>
	<string name="txt_mulit_select">多选</string>
	<string name="msg_sdcard_full">存储卡已满</string>
	<string name="error_net_work">请检查网络链接</string>
	<string name="click_to_reg">您有%d条免费短信, 激活获取更多</string>
	<string name="errorDialogTitle">"没有照片"</string>
	<string name="photoPickerNotFoundText">"手机上没有照片。"</string>
	<string name="menu_deleteContact">"删除联系人"</string>
	<string name="menu_done">"完成"</string>
	<string name="menu_doNotSave">"取消"</string>
	<string name="deleteConfirmation_title">"删除"</string>
	<string name="deleteConfirmation">"确定删除此联系人?"</string>
	<string name="customLabelPickerTitle">"自定义标签名称"</string>
	<string name="selectLabel">"选择标签"</string>
	<string-array name="ghostData">
		<item>"电话号码"</item>
		<item>"电子邮件地址"</item>
		<item>"网址"</item>
		<item>"关系"</item>
		<item>"邮政地址"</item>
		<item>"纪念日"</item>
		<item>"即时消息"</item>
	</string-array>
	<string-array name="IMLabel">
		<item>"91u"</item>
		<item>"AIM"</item>
		<item>"MSN"</item>
		<item>"YAHOO"</item>
		<item>"SKYPE"</item>
		<item>"QQ"</item>
		<item>"GTALK"</item>
		<item>"ICQ"</item>
		<item>"JABBER"</item>
	</string-array>
	<string-array name="anniversary">
		<item>"周年纪念日"</item>
		<item>"其他"</item>
	</string-array>
	<string-array name="related">
		<item>"助手"</item>
		<item>"兄弟"</item>
		<item>"子女"</item>
		<item>"国内合作伙伴"</item>
		<item>"父亲"</item>
		<item>"好友"</item>
		<item>"经理"</item>
		<item>"母亲"</item>
		<item>"父母"</item>
		<item>"合作伙伴"</item>
		<item>"介绍人"</item>
		<item>"亲属"</item>
		<item>"姐妹"</item>
		<item>"配偶"</item>
		<item>"其他"</item>
	</string-array>
	<string-array name="website">
		<item>"个人主页"</item>
		<item>"博客"</item>
		<item>"个人资料"</item>
		<item>"家庭"</item>
		<item>"工作"</item>
		<item>"FTP"</item>
		<item>"其他"</item>
	</string-array>
	<string-array name="phoneTypes">
		<item>"固话(家庭）"</item>
		<item>"手机"</item>
		<item>"固话（工作）"</item>
		<item>"传真（工作）"</item>
		<item>"传真（家庭）"</item>
		<item>"传呼"</item>
		<item>"其他"</item>
		<item>"自定义"</item>
	</string-array>
	<string-array name="email">
		<item>家庭</item>
		<item>工作</item>
		<item>其他</item>
		<item>自定义</item>
	</string-array>
	<string-array name="postal">
		<item>家庭</item>
		<item>工作</item>
		<item>其他</item>
		<item>自定义</item>
	</string-array>
	<string name="ghostData_birthday">"生日"</string>
	<string name="ghostData_nickname">"昵称"</string>
	<string name="ghostData_anniversary">"纪念日"</string>
	<string name="ghostData_website">"网址"</string>
	<string name="ghostData_related">"关系"</string>
	<string name="listSepartorNickname_edit">"昵称"</string>
	<string name="listSepartorAnniversary_edit">"纪念日"</string>
	<string name="listSepartorRelate_edit">"关系"</string>
	<string name="listSepartorWebSite_edit">"网址"</string>
	<string name="label_nickname">"昵称"</string>
	<string name="label_birthday">"生日"</string>
	<string name="label_catagory">"分组"</string>
	<string name="label_org">"组织机构"</string>
	<string name="download_big_avatar_alert_title">下载大头像</string>
	<string name="download_big_avatar_alert_msg">确定使用当前网络下载大头像？</string>
	<string name="tab_txt_contacts">联系人</string>
	<string name="tab_txt_call_log">通话记录</string>
	<string name="tab_txt_dialer">拨号</string>
	<string name="tab_txt_friend">好友</string>
	<string name="tab_txt_option">设置</string>
	<string name="tab_txt_dynamic">分享</string>
	<string name="tab_txt_mention">MO我的</string>
	<string name="tab_txt_im">短信</string>
	<string name="radio_main_contact">我的联系人</string>
	<string name="radio_main_group">群联系人</string>
	<string name="main_activity_account_choose">选择MOMO绑定的账号</string>
	<string name="main_activity_msg_no_account">获取不到任何账号</string>
	<string name="main_activity_menu_new_contact">新建联系人</string>
	<string name="main_activity_menu_edit_member">编辑分组成员</string>
	<string name="main_activity_menu_delete_contact">删除联系人</string>
	<string name="main_activity_menu_sync_group">同步群组</string>
	<string name="main_activity_menu_option">设置</string>
	<string name="main_activity_menu_exit">退出</string>
	<string name="main_activity_menu_draft">草稿箱</string>
	<string name="title_upgrade">升级</string>
	<string name="title_upgrade_hint">您在使用的momo客户端版本太低，需要升级后才能继续使用。</string>
	<string name="title_upgrade_client">升级客户端</string>
	<string name="title_upgrade_url">http://momo.im</string>
	<string name="title_login">登录</string>
	<string name="btn_login">立即登录</string>
	<string name="btn_regist">注册MOMO</string>
	<string name="btn_login_return">返回</string>
	<string name="txt_reg_num">手机号码</string>
	<string name="txt_reg_pwd">密码</string>
	<string name="txt_forget_pwd">忘记密码</string>
	<string name="txt_reg_verify_code">验证码</string>
	<string name="btn_reg_active">激活账号</string>
	<string name="btn_reg_verify">立即注册</string>
	<string name="btn_reg_have_verify">我有验证码</string>
	<string name="btn_reg_cancel_active">放弃激活此账号</string>
	<string name="txt_login_input_verify">请输入手机接收到的验证码:</string>
	<string name="txt_force_change_password_tip">为了您的帐号安全，请马上修改密码</string>
	<string name="txt_old_password_hint">原密码</string>
	<string name="txt_new_password_hint">新密码</string>
	<string name="txt_old_password_tip">请输入旧密码</string>
	<string name="txt_new_password_tip">请输入新密码</string>
	<string name="txt_new_password_lenght_tip">密码长度不得小于6位</string>
	<string name="chk_save_pwd">保存密码</string>
	<string name="msg_login_progress_title">登录</string>
	<string name="msg_login_unknow_error">登录失败</string>
	<string name="msg_login_progress_info">登录中，请稍等...</string>
	<string name="msg_login_regist_success">已注册成功，请登录。</string>
	<string name="msg_login_pwd_error">用户名或者密码错误</string>
	<string name="msg_login_not_found_error">服务器未找到</string>
	<string name="msg_login_phone_num_empty">请输入手机号</string>
	<string name="msg_login_password_empty">请输入登录密码</string>
	<string name="msg_reg_verify_code_null">请输入验证码</string>
	<string name="txt_change_pwd">修改密码</string>
	<string name="txt_change_pwd_waiting">修改密码进行中...</string>
	<string name="txt_change_mobile">更换手机号</string>
	<string name="txt_international_regist">非中国大陆地区注册</string>
	<string name="btn_reg_info_OK">确定</string>
	<string name="btn_get_verify_code">获取验证码</string>
	<string name="btn_msg_verify">好</string>
	<string name="txt_confirm_pwd">再次输入密码</string>
	<string name="txt_real_f_name">您的姓（请输入真实姓名）</string>
	<string name="txt_real_name">您的名（请输入真实姓名）</string>
	<string name="txt_phone_number">手机号: </string>
	<string name="txt_birthday">生日</string>
	<string name="txt_sex">性别:</string>
	<string name="btn_reg_ok">注册</string>
	<string name="btn_reg_cancel">重新验证</string>
	<string name="radio_female">女</string>
	<string name="radio_male">男</string>
	<string name="msg_get_sms_password_request">提交请求中...</string>
	<string name="msg_reg_info_process_title">注册用户</string>
	<string name="txt_reg_title">用户注册</string>
	<string name="msg_reg_info_get_verify_code">获取验证码中，请稍等...</string>
	<string name="msg_reg_info_process_info">注册中，请稍等...</string>
	<string name="msg_reg_info_sennding_sms">正在等待接收注册短信...</string>
	<string name="msg_reg_info_do_active">开始注册账号...</string>
	<string name="msg_reg_info_error_exist">注册信息中尚有不正确的格式</string>
	<string name="msg_reg_info_mobile_error">请输入手机号码</string>
	<string name="msg_reg_info_verify_code_error">请输入验证码</string>
	<string name="msg_reg_info_find_verify_timeout">等待注册短信超时，请手动输入验证码注册账号</string>
	<string name="msg_get_verify">我们将以短信形式发送给您验证码，请查收。</string>
	<string name="msg_get_sms_password">获取短信密码</string>
	<string name="msg_reg_info_verify_empty">验证码未输入</string>
	<string name="msg_reg_info_phone_null">手机号不能为空</string>
	<string name="msg_reg_info_phone_format">手机号码格式不对</string>
	<string name="msg_reg_info_phone_length">号码须为数字，至少需要3位以上</string>
	<string name="msg_reg_info_too_much_try">一天的验证码请求不能超过3次</string>
	<string name="msg_reg_info_server_busy">系统异常，请稍候再试</string>
	<string name="msg_reg_info_send_sms_fail">短信发送失败</string>
	<string name="msg_reg_info_already_exist">该手机号码已注册</string>
	<string name="msg_reg_info_already_verify">该手机号码未注册，不能激活</string>
	<string name="msg_reg_info_already_regist">该手机号码已验证过</string>
	<string name="msg_reg_info_verify_null">验证码为空</string>
	<string name="msg_reg_info_verify_illegal">验证码不正确</string>
	<string name="msg_reg_info_verify_expired">该验证码已过期</string>
	<string name="msg_reg_info_no_phone_for_verify_found">未查到该手机号对应的验证码</string>
	<string name="msg_reg_info_regist_fail">帐号激活失败</string>
	<string name="msg_reg_info_pwd_empty">请填写密码</string>
	<string name="msg_reg_info_pwd_length">密码需要至少6位</string>
	<string name="msg_reg_info_verify_format">验证码格式不对</string>
	<string name="msg_reg_info_pwd_incorrect">重复输入的密码不一致</string>
	<string name="msg_reg_info_name_empty">请填写姓名</string>
	<string name="msg_reg_info_name_illegal">姓名不是中文或者长度不合法</string>
	<string name="msg_reg_info_birthday_empty">请填写生日信息</string>
	<string name="msg_reg_info_sex_not_choose">请选择性别</string>
	<string name="msg_reg_info_phone_already_regist">手机号码已注册过</string>
	<string name="msg_lead_sync">马上同步联系人吧，将您的通讯录安全备份至网络，方便恢复到本地或新手机，您还可以通过momo.im网站更新管理通讯录或与联系人消息互通。第一次同步需要多花点时间，别急，下次就飞快了！</string>
	<string name="msg_lead_sync_account">选择您要同步的本地联系人帐号</string>
	<string name="msg_lead_sync_set_sync_mode">设置默认同步方式</string>
	<string name="msg_lead_sync_sync_begin">立即同步</string>
	<string name="msg_lead_sync_sync_click_begin">(点击开始同步)</string>
	<string name="msg_lead_sync_sync_cancel">暂不同步</string>
	<string name="msg_lead_sync_sync_cancel_title">确定不同步吗？</string>
	<string name="msg_lead_sync_cancel_confirm">不同步联系人无法获取好友最新分享，也不能在电脑上发短信，确定不开启同步？</string>
	<string name="msg_lead_sync_confirm">现在就同步联系人到服务器？</string>
	<string name="msg_sync_account">同步帐号:</string>
	<string name="btn_add_friend">加为好友</string>
	<string name="btn_is_friend">已是好友</string>
	<string name="msg_add_friend">添加好友...</string>
	<string name="tab_sync_main">同步</string>
	<string name="tab_sync_setting">设置</string>
	<string name="btn_sync_all">开始同步</string>
	<string name="spner_sync_manual">手动同步</string>
	<string name="spner_sync_auto">自动同步</string>
	<string name="txt_no_sync">不同步</string>
	<string name="txt_sync">立即同步</string>
	<string name="sync_mode_choose_title">选择同步方式</string>
	<string name="sync_mode_two_way">本地和网站互相同步</string>
	<string name="sync_mode_one_way">仅从网站同步到本地</string>
	<string name="txt_my_contact_card_hide_year">隐藏年份</string>
	<string name="txt_my_contact_card_lunar_birthday">我过农历生日</string>
	<string name="txt_my_contact_card_email_tip">请输入完整的邮箱地址</string>
	<string name="txt_my_contact_card_weibo_account_label">帐号：</string>
	<string name="txt_my_contact_card_weibo_password_label">密码：</string>
	<string name="txt_my_contact_card_weibo_tip">已通过新浪微博应用官方认证，请放心使用。</string>
	<string name="txt_about_title">关于MOMO</string>
	<string name="txt_about_address">MOMO \n
		Ver</string>
	<string name="txt_about_url">http://momo.im</string>
	<string name="txt_about_text">MOMO是一款基于手机通讯录的熟人社交及短信增强应用，开创好友免邀请、免注册安装的即时社交模式，并使短信功能升级，实现群聊、照片、语音、LBS等信息的全球分享。此外，采用全系统开发策略，支持联系人资料于不同平台、手机间的同步、迁移，同时允许电脑通过momo.im网站与手机消息互通。</string>
	<string name="txt_about_version">版权所有©2009-2012 MOMO工作室</string>
	<string name="txt_user_card_change_mobile_tip">新手机号</string>
	<string name="txt_user_card_change_mobile_password_tip">用户密码</string>
    <string name="statuses_map_small">小图预览</string>
    <string name="statuses_map_big">大图预览</string>
    <string name="statuses_map_no">无图预览</string>
   	<string name="bind_mobile">验证手机号</string>
   	<string name="verify_code">验证</string>
</resources>