<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0E8EB">  
    <TextView 
    	android:id="@+id/textTitle"
    	android:background="@drawable/title_background"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="18sp"
    	android:textColor="#FFFFFF"
    	android:gravity="center"
    	android:text="@string/txt_about_title"/>
    <ScrollView  
    	android:orientation="vertical"  	
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:layout_weight="1.0">
    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
    <RelativeLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<ImageView 
    		android:id="@+id/imageView"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:src="@drawable/ts_icon"
    		android:padding="10dip"/>
    	<TextView 
    		android:id="@+id/textAddress"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/txt_about_address"
    		android:layout_toRightOf="@id/imageView"
    		android:textColor="#7F6A50"
    		android:paddingTop="10dip"
    		android:paddingLeft="10dip"
    		/>
    	<TextView 
    		android:id="@+id/textMo"
    		android:autoLink="web"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:paddingLeft="10dip"
    		android:text="@string/txt_about_url"
    		android:layout_toRightOf="@id/imageView"
    		android:layout_below="@id/textAddress"
    		android:textColor="#9C8B6F"
    		android:textSize="12sp"/>
    </RelativeLayout>
    <LinearLayout
    	android:orientation="vertical"
    	android:background="@drawable/about_me_main_bg"
    	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
   	 	android:padding="5dip"
   	 	android:layout_margin="10dip">
   	 	<TextView 
   	 		android:id="@+id/textView1"
   	 		android:layout_width="fill_parent"
   	 		android:layout_height="wrap_content"   	 
   	 		android:padding="10dip"
   	 		android:textSize="12sp"
   	 		android:textColor="#8F8F8F"
   	 		android:text="@string/txt_about_text"/>
    </LinearLayout>
    <TextView 
    	android:id="@+id/textEnd"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="12sp"
    	android:text="@string/txt_about_version"
    	android:textColor="#B29981"
    	android:gravity="center"
    	android:layout_margin="10dip"/>
    	</LinearLayout>
    </ScrollView>
</LinearLayout>
