<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#e0e8ec">
  
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:background="@drawable/title_background"
		android:textColor="@color/white"
		android:textSize="20sp"
		android:text="@string/txt_change_pwd"/>
			
    <ScrollView android:fillViewport="true"
    	android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_weight="1">
			
		<LinearLayout android:id="@+id/reg_info_container"
			style="@style/LoginContainer">
				
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="12dip"
				android:layout_marginBottom="12dip">
				
				<EditText android:id="@+id/txt_old_password" 
					android:layout_width="1dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:password="true"
					android:background="@drawable/login_edit_background"
					android:hint="@string/txt_old_password_hint"/>
			</LinearLayout>
				
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginBottom="12dip">
				
				<EditText android:id="@+id/txt_new_password" 
					android:layout_width="1dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@drawable/login_edit_background"
					android:hint="@string/txt_new_password_hint"/>
			</LinearLayout>
			
			<TextView android:id="@+id/txt_error"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:layout_marginBottom="20dip"/>
						
			<Button android:id="@+id/btn_submit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="立即修改"
				android:layout_marginBottom="12dip"
				style="@style/WhiteButtonView"/>
				
			<TextView android:id="@+id/txt_forget_pwd"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:text="@string/txt_forget_pwd"/>
			
		</LinearLayout>
	</ScrollView>
</LinearLayout>
