<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:padding="0dip"
    android:layout_margin="0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/birthday_select"
	 	android:padding="10dip"
	 	android:visibility="gone"
	 	android:orientation="vertical"
	 	android:minWidth="300dip"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <DatePicker android:id="@+id/birthday_selector"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    />
		    <LinearLayout android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dip"
		    android:layout_marginBottom="15dip"
		    android:paddingLeft="5dip"
		    android:paddingRight="5dip"
		    android:orientation="horizontal">
		    	<CheckBox android:id="@+id/chk_hide_year"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:checked="true"
				    android:minHeight="24dip"
				    android:minWidth="24dip"
				    android:focusable="false"
				    android:layout_weight="1"
				    android:background="@drawable/ic_null"
				    android:paddingLeft="24dip"
				    android:textColor="@color/font_gray"
				    android:text="@string/txt_my_contact_card_hide_year"
				    style="@style/GroupSmsCheckBox"
				    />
				<CheckBox android:id="@+id/chk_lunar_birthday"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:checked="true"
				    android:minHeight="24dip"
				    android:minWidth="24dip"
				    android:focusable="false"
				    android:layout_weight="1"
				    android:background="@drawable/ic_null"
				    android:paddingLeft="24dip"
				    android:textColor="@color/font_gray"
				    android:text="@string/txt_my_contact_card_lunar_birthday"
				    style="@style/GroupSmsCheckBox"
				    />
		    </LinearLayout>
	    </LinearLayout>
    <LinearLayout android:id="@+id/mobile_change"
	 	android:padding="10dip"
	 	android:minWidth="300dip"
	 	android:visibility="gone"
	 	android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<EditText 
			android:id="@+id/edit_text_mobile"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:phoneNumber="true"
			android:background="@drawable/login_edit_background"
			android:hint="@string/txt_user_card_change_mobile_tip"
			/>
		<EditText 
			android:id="@+id/edit_text_user_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:password="true"
			android:singleLine="true"
			android:background="@drawable/login_edit_background"
			android:hint="@string/txt_user_card_change_mobile_password_tip"
			/>
    </LinearLayout>
    <LinearLayout android:id="@+id/user_card_sex_edit"
	 	android:paddingLeft="10dip"
	 	android:paddingRight="10dip"
	 	android:paddingTop="20dip"
	 	android:paddingBottom="20dip"
	 	android:minWidth="300dip"
	 	android:visibility="gone"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <RadioGroup 
	     android:id="@+id/sex_radio_group"
	     android:orientation="horizontal"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <RadioButton
		     android:id="@+id/sex_radio_male"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_weight="1"
		     android:textColor="@color/black"
		     android:text="@string/radio_male"/>
	     <RadioButton
		     android:id="@+id/sex_radio_female"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_weight="1"
		     android:textColor="@color/black"
		     android:text="@string/radio_female"/>
	    </RadioGroup>
    </LinearLayout>
	<LinearLayout android:id="@+id/item_setting"
	 	android:padding="10dip"
	 	android:minWidth="300dip"
	 	android:visibility="gone"
	 	android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<EditText 
			android:id="@+id/edit_text_value"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/login_edit_background"
			/>
		<TextView
			android:id="@+id/edit_text_tip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:layout_gravity="center_vertical"
			android:textSize="16sp"
			android:visibility="gone"
			android:textColor="@color/font_gray_small"
			android:text="@string/txt_my_contact_card_email_tip"
			/>
    </LinearLayout>
   	<LinearLayout android:id="@+id/weibo_setting"
	 	android:padding="10dip"
	 	android:visibility="gone"
	 	android:orientation="vertical"
	 	android:minWidth="300dip"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <LinearLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginBottom="5dip">
	    	<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:layout_gravity="center_vertical"
				android:textSize="18sp"
				android:text="@string/txt_my_contact_card_weibo_account_label"
				/>
			<EditText 
				android:id="@+id/edit_text_weibo_account"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/login_edit_background"
				/>

		</LinearLayout>
		<LinearLayout 
		   	android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:layout_marginBottom="5dip">
		   	<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:layout_gravity="center_vertical"
				android:textSize="18sp"
				android:text="@string/txt_my_contact_card_weibo_password_label"
				/>
			<EditText 
				android:id="@+id/edit_text_weibo_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:password="true"
				android:layout_weight="1"
				android:background="@drawable/login_edit_background"
				/>

		</LinearLayout>
		<LinearLayout 
		   	android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:layout_marginBottom="5dip">
		   	<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:layout_gravity="center_vertical"
				android:textSize="18sp"
				android:visibility="invisible"
				android:text="@string/txt_my_contact_card_weibo_password_label"
				/>
		   	<CheckBox android:id="@+id/chk_follow_momo"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:checked="true"
				    android:minHeight="24dip"
				    android:minWidth="24dip"
				    android:focusable="false"
				    android:layout_weight="1"
				    android:background="@drawable/ic_null"
				    android:paddingLeft="24dip"
				    android:textColor="@color/font_gray"
				    android:text="同时关注官方微博"
				    style="@style/GroupSmsCheckBox"
				    />
		</LinearLayout>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:layout_marginLeft="10dip"
			android:layout_gravity="center_vertical"
			android:textSize="16sp"
			android:text="@string/txt_my_contact_card_weibo_tip"
			/>
    </LinearLayout>
</LinearLayout>
