<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_button_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:orientation="horizontal"
    android:paddingBottom="5dip"
    android:paddingTop="5dip" >

    <RadioButton
        android:id="@+id/rbtn_small_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_weight="1"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:text="@string/statuses_map_small"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/rbtn_big_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:text="@string/statuses_map_big"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/rbtn_no_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:text="@string/statuses_map_no"
        android:textColor="@color/black"
        android:textSize="12sp" />

</RadioGroup>