<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_main"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e0e8ec">
		
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
				
					<LinearLayout android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="20dip"
						style="@style/LoginContainer"
						android:orientation="vertical">
						
						<Button android:id="@+id/btn_select_country"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="20dip"
							android:layout_marginBottom="20dip"
							style="@style/WhiteButtonView"
							android:background="@drawable/frame_set_whole_normal"
							android:textColor="@color/black"
							android:text="中国(+86)"/>						
						
						<EditText android:id="@+id/txt_name" 
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="10dip"
							android:phoneNumber="true"
							android:inputType="number"
							android:background="@drawable/login_edit_background"
							android:hint="@string/txt_reg_num"
							android:textColor="#000000" />
				
						<EditText android:id="@+id/txt_pwd"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="20dip"
							android:password="true"
							android:singleLine="true"
							android:background="@drawable/login_edit_background"
							android:hint="@string/txt_reg_pwd"
							android:textColor="#000000" />
						 									
						<LinearLayout android:orientation="horizontal"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="20dip">
						
							<Button android:id="@+id/btn_login"
								android:layout_height="wrap_content"
								android:layout_width="1dip"
								android:layout_weight="1"
								style="@style/WhiteButtonView"
								android:textColor="@color/black"
								android:text="@string/btn_login"/>
						</LinearLayout>
						
						<TextView android:id="@+id/btn_register"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="150dp"
							android:gravity="center"
							android:text="@string/btn_regist"/>
						
					</LinearLayout>
			
	</ScrollView>
</LinearLayout>
